--- a/_posts/2021-11-15-LFI.md
+++ b/_posts/2021-11-15-LFI.md
@@ -4,7 +4,7 @@ share: false
 excerpt: "El mejor metodo de aprendizaje es practicando"
 share: false
 header:
-  teaser:  /assets/images/lfi/logo.jpg
+  teaser:  /assets/images/lfi/logo.png
   teaser_home_page: true
 categories:
   - tryhackme
