--- a/_posts/2021-10-21-Rootme.md
+++ b/_posts/2021-10-21-Rootme.md
@@ -1,7 +1,7 @@
 ---
 title: "tryhackme: Rootme"
 share: false
-excerpt: "El mejor metodo de aprendizaje es practicando"
+excerpt: "Un ctf para principiantes, ¿puedes rootearme? "
 share: false
 header:
   teaser:  /assets/images/rootme/logo.jpg
