--- a/_posts/2021-10-25-kenobi.md
+++ b/_posts/2021-10-25-kenobi.md
@@ -1,7 +1,7 @@
 ---
 title: "tryhackme: Kenobi"
 share: false
-excerpt: "El mejor metodo de aprendizaje es practicando"
+excerpt: "Tutorial sobre la explotación de una máquina Linux. Enumere Samba para compartir, manipule una versión vulnerable de proftpd y aumente sus privilegios con la manipulación de la variable de ruta. "
 share: false
 header:
   teaser:  /assets/images/kenobi/logo.jpg
