--- a/_posts/2021-11-01-MrRobot.md
+++ b/_posts/2021-11-01-MrRobot.md
@@ -1,7 +1,7 @@
 ---
 title: "tryhackme: Mr Robot"
 share: false
-excerpt: "El mejor metodo de aprendizaje es practicando"
+excerpt: "Basado en el programa Mr. Robot, ¿puedes rootear esta caja?"
 share: false
 header:
   teaser:  /assets/images/MrRobot/logo.jpg
