--- a/_posts/2021-11-11-blue.md
+++ b/_posts/2021-11-11-blue.md
@@ -1,7 +1,7 @@
 ---
 title: "tryhackme: blue"
 share: false
-excerpt: "El mejor metodo de aprendizaje es practicando"
+excerpt: "Implemente y piratee una máquina con Windows, aprovechando los problemas comunes de mala configuración."
 share: false
 header:
   teaser:  /assets/images/blue/logo.jpeg
