--- a/_posts/2021-11-15-LFI.md
+++ b/_posts/2021-11-15-LFI.md
@@ -1,7 +1,7 @@
 ---
 title: "tryhackme: LFI"
 share: false
-excerpt: "El mejor metodo de aprendizaje es practicando"
+excerpt: "Un desafío LFI para principiantes"
 share: false
 header:
   teaser:  /assets/images/lfi/logo.png
