--- a/_posts/2021-11-23-rick.md
+++ b/_posts/2021-11-23-rick.md
@@ -1,10 +1,10 @@
 ---
 title: "tryhackme: Pickle Rick"
 share: false
-excerpt: "El mejor metodo de aprendizaje es practicando"
+excerpt: "Un CTF de Rick y Morty. ¡Ayuda a que Rick vuelva a ser humano! "
 share: false
 header:
-  teaser:  /assets/images/rick/logo.jpeg
+  teaser:  /assets/images/rick/logo.jpg
   teaser_home_page: true
 categories:
   - tryhackme
