--- a/_posts/2021-10-21-Rootme.md
+++ b/_posts/2021-10-21-Rootme.md
@@ -18,11 +18,23 @@ tags:
 
 Lo primero que haremos ser un *ping -c 1* al _ip_ y ver si nuestra maquina ya esta activa
 
-![descripcion imagene](/assets/images/rootme/ping.png)
+```bash
+❯ ping -c 1 10.10.238.78
+PING 10.10.238.78 (10.10.238.78) 56(84) bytes of data.
+64 bytes from 10.10.238.78: icmp_seq=1 ttl=63 time=235 ms
+
+--- 10.10.238.78 ping statistics ---
+1 packets transmitted, 1 received, 0% packet loss, time 0ms
+rtt min/avg/max/mdev = 234.930/234.930/234.930/0.000 ms
+```
 
 usamos *wichSystem.py* (utilidad desarrollada por @s4vitar) para ver con que clase de maquina estamos trabajando
 
-![descripcion imagene](/assets/images/rootme/linux.png)
+```bash
+❯ wichSystem.py 10.10.238.78
+
+10.10.238.78 (ttl -> 63): Linux
+```
 
 - Ahora realizamos un primer escaneo de puertos usando la *nmap*
 
@@ -40,13 +52,12 @@ Descripción de los parámetros:
 - ip: la ip que queremos escanear
 - -oG : Guarda la salida del escaneo en un formato grepeable (no sea util mas adelante)
 
-![descripcion imagene](/assets/images/rootme/linux1.png)
-
 vemos el resultado del escaneo usando un scripts llamado _extractPorts_ ya configurado en mi _~./zshrc_
 
 ![descripcion imagene](/assets/images/rootme/ports.png)
 
-Ya que sabemos que la maquina tiene abierto los puerto s *80,22*  intentaremos averiguar que servicios corren y en que versiones
+Ya que sabemos que la maquina tiene abierto los puertos *80,22*  intentaremos averiguar que servicios corren, en que versiones y
+posible vulnerabilidades
 
 ![descripcion imagene](/assets/images/rootme/nmap2.png)
 
@@ -64,7 +75,7 @@ Iniciamos buscando rutas usando la herramienta *gobuster*, su metodo de uso es s
 
 ![descripcion imagene](/assets/images/rootme/gobuster.png)
 
-Vemos que tenemos varias rutas, iniciemos probando con *https://10.10.244.164/panel*
+Vemos que tenemos varias rutas, iniciemos probando con *https://10.10.238.78/panel*
 
 ![descripcion imagene](/assets/images/rootme/panel.png)
 
@@ -78,11 +89,9 @@ al ver que no nos permite cargar archivos *php*, intentamos cargar *php5* y verm
 
 # 3. Ganando acceso a la maquina
 
-![descripcion imagene](/assets/images/rootme/shell2.png)
-
 vamos una de las rutas que encontramos con _gobuster_ 
 
-![descripcion imagene](/assets/images/rootme/shell3.png)
+![descripcion imagene](/assets/images/rootme/shell.png)
 
 - ponemos nuestra maquina en escucha para recivir la conexion desde la maquina que estamos trabajando
 
